--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,5 +7,8 @@
     },
     "ConnectionStrings": {
         "DefaultConnection": "Data Source=DatingApp.db"
-    }
+    },
+
+    "TokenKey": "this is tokenkey generate the token  this is tokenkey to generate the token "
+
 }
